--- a/src/app/pages/inicio/datos-personales/datos-personales.page.html
+++ b/src/app/pages/inicio/datos-personales/datos-personales.page.html
@@ -11,52 +11,45 @@
         <form id="registration-form">
           <ion-card-title>Datos personales</ion-card-title>
           <ion-card-content>
-            
+            <!--NOMBRE-->
             <div class="input-row">
               <ion-input label="Nombre:" type="text" name="nombre" minlength="3" maxlength="15" required
                 (keydown)="onKeyDown($event)" [(ngModel)]="nombreEnviado" #nombreEnviadoModel="ngModel"
                 label-placement="floating" fill="outline" [value]="nombreEnviado">
               </ion-input>
-              <div class="error-message" *ngIf="nombreEnviadoModel.invalid && (nombreEnviadoModel.dirty || nombreEnviadoModel.touched)">
+              <div class="error-message"
+                *ngIf="nombreEnviadoModel.invalid && (nombreEnviadoModel.dirty || nombreEnviadoModel.touched)">
                 <p *ngIf="nombreEnviadoModel.errors?.['required']">El nombre es obligatorio</p>
                 <p *ngIf="nombreEnviadoModel.errors?.['minlength']">El nombre debe tener al menos 3 caracteres.</p>
                 <p *ngIf="nombreEnviadoModel.errors?.['maxlength']">El nombre no debe exceder los 15 caracteres.</p>
               </div>
             </div>
             <br>
+            <!--APELLIDO-->
             <ion-input label="Apellido:" type="text" name="apellido" minlength="3" maxlength="15" required
               (keydown)="onKeyDown($event)" [(ngModel)]="apellidoEnviado" #apellidoEnviadoModel="ngModel"
-              label-placement="floating" fill="outline" [value]="apellidoEnviado" >
+              label-placement="floating" fill="outline" [value]="apellidoEnviado">
             </ion-input>
-            <div class="error-message" *ngIf="apellidoEnviadoModel.invalid && (apellidoEnviadoModel.dirty || apellidoEnviadoModel.touched)">
+            <div class="error-message"
+              *ngIf="apellidoEnviadoModel.invalid && (apellidoEnviadoModel.dirty || apellidoEnviadoModel.touched)">
               <p *ngIf="apellidoEnviadoModel.errors?.['required']">El apellido es obligatorio</p>
               <p *ngIf="apellidoEnviadoModel.errors?.['minlength']">El Apellido debe tener al menos 3 caracteres.</p>
               <p *ngIf="apellidoEnviadoModel.errors?.['maxlength']">El apellido no debe exceder los 15 caracteres.</p>
             </div>
             <br>
-
+            <!--CORREO-->
             <ion-input label="Correo electrónico:" type="email" label-placement="floating" required readonly
               fill="outline" placeholder="profeponga7@gmail.com" [value]="emailEnviado"></ion-input>
             <br>
-            <ion-input label="Rut:" type="text" label-placement="floating" fill="outline" [value]="rutEnviado" required readonly
-              placeholder="26.098.098-2"></ion-input>
-            <br>
-            <ion-input label="Nombre de otra persona para retiro::" type="text" name="segPersona" minlength="3"
-              maxlength="15" (keydown)="onKeyDown($event)" [(ngModel)]="segPersonaValue" #segPersonaModel="ngModel"
-              label-placement="floating" fill="outline" placeholder="Mario Jose">
-            </ion-input>
-            <div class="error-message"
-              *ngIf="segPersonaModel.invalid && (segPersonaModel.dirty || segPersonaModel.touched)">
-              <p *ngIf="segPersonaModel.errors?.['minlength']">El nombre debe tener al menos 3 caracteres.</p>
-              <p *ngIf="segPersonaModel.errors?.['maxlength']">El nombre no debe exceder los 15 caracteres.</p>
-            </div>
+            <!--RUT-->
+            <ion-input label="Rut:" type="text" label-placement="floating" fill="outline" [value]="rutEnviado" required
+              readonly placeholder="26.098.098-2"></ion-input>
             <br>
             <ion-button expand="50px" style="align-content: center;align-items: center;display: flex;"
               type="submit">Guardar cambios</ion-button>
           </ion-card-content>
         </form>
       </ion-card>
-
     </ion-row>
   </ion-grid>
   <app-componente2></app-componente2>
